GNOME Bugzilla – Bug 755168
owncloud, exchange: Sanitize HTTP error messages
Last modified: 2015-10-01 17:47:50 UTC
When adding an ownCloud or Exchange account, if anything goes wrong we show something cryptic like: "Code: 401 — Unexpected response from server" We should show something more human readable than the underlying HTTP status code.
Created attachment 311571 [details] [review] ewsclient, httpclient, utils: Sanitize SOUP_STATUS_UNAUTHORIZED This uses a pre-existing string. Hence suitable for string-frozen branches.
Created attachment 312510 [details] [review] utils: Sanitize name resolution failures and wrong server values
This should take care of the most common errors. We can handle more if the need arises.
Created attachment 312521 [details] [review] Updated POTFILES.in and removed redundant includes