ewsclient, httpclient, utils: Sanitize SOUP_STATUS_UNAUTHORIZED

Let's leverage the fact that "Authentication failed" is already used
elsewhere in the code.

https://bugzilla.gnome.org/show_bug.cgi?id=755168